# llm_from_scratch

./: .gitignore  LICENSE  README.md  __cleanup.sh  _model_graph  _summary.txt  cleanup.sh  draw_graph  model_0.pt  model_1000.pt  model_graph  pyproject.toml  torchview  torchviz  torchviz_GPT  torchviz_GPT_final_GPT_v7  torchviz_GPT_v1  torchviz_GPT_v2  torchviz_GPT_v3  torchviz_GPT_v4  torchviz_GPT_v5  torchviz_GPT_v6  torchviz_GPT_v6_GPT_v6  torchviz_GPT_v7  torchviz_GPT_v7_GPT_v7
awesome_llm/: main.py  main_bigram.py  main_mpl.py  short_main.py
awesome_llm copy/: main.py
awesome_llm copy/data/: base_data_loader.py
awesome_llm copy/models/: neural_network_model.py
awesome_llm copy/trainers/: mpl_trainer.py  neural_network_trainer.py
awesome_llm copy/utils/: helpers.py
awesome_llm/configs/: config.toml
awesome_llm/data/: base_data.py  names_data_loader.py  text_data.py
awesome_llm/info/: model_GPT_v1.onnx  model_GPT_v2.onnx  model_GPT_v3.onnx  model_GPT_v4.onnx  model_GPT_v5.onnx  model_GPT_v6.onnx  model_GPT_v6_GPT_v6.onnx  model_GPT_v7_GPT_v7.onnx  torchinfo_GPT_v1.txt  torchinfo_GPT_v2.txt  torchinfo_GPT_v3.txt  torchinfo_GPT_v4.txt  torchinfo_GPT_v5.txt  torchinfo_GPT_v6.txt  torchinfo_GPT_v6_GPT_v6.txt  torchinfo_GPT_v7.txt  torchinfo_GPT_v7_GPT_v7.txt
awesome_llm/models/: base_model.py  mlp_model.py  model_v1.py  model_v2.py  model_v3.py  model_v4.py  model_v5.py  model_v6.py  model_v7.py  tabular_bigram_model.py
awesome_llm/modules/: base.py  bigram.py  (+3 more)
bigram/: main.py  model.py  utils.py
educational/: utils.py
steps/: utils.py
(+42 files in other folders)
