[tool.poetry]
name = "awesome-llm"
version = "0.1.0"
description = ""
authors = ["Piergiuseppe Mallozzi <piergiuseppe.mallozzi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.2"
torch = "^2.2.0"
seaborn = "^0.13.2"
tiktoken = "^0.5.2"
toml = "^0.10.2"
onnx = "^1.15.0"
torchviz = "^0.0.2"
graphviz = "^0.20.1"
torchinfo = "^1.8.0"
torchview = "^0.2.6"
bertviz = "^1.4.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
